--- a/paginas/Calculadora.html
+++ b/paginas/Calculadora.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="/css/estilo.css">
   <link rel="stylesheet" href="/css/calculo.css">
   <script src="/js/calculadora.js" defer></script>
+ <!-- Bibliotecas necessárias -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
   <title>Portal Savegnago - Hora de Saída</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -24,37 +28,86 @@
     </header>
 
   <div class="container-box">
-    <h4 class="mb-4 text-center">🕒 Calculadora de Hora de Saída</h4>
+    <h3 class="text-center mb-4">🕒 Calculadora de Ponto </h3>
 
-    <form id="calcForm">
+    <!-- Seção 1: Hora de saída -->
+    <form id="calcForm" novalidate>
+      <h5 class="mb-3">📌 Hora de Saída</h5>
       <div class="mb-3">
         <label for="horaChegada" class="form-label">Hora de chegada</label>
         <input type="time" class="form-control" id="horaChegada" required>
       </div>
-
       <div class="row mb-3">
         <div class="col">
           <label for="intervaloHoras" class="form-label">Horas de intervalo</label>
-          <input type="number" class="form-control" id="intervaloHoras" min="0" value="0">
+          <input type="number" class="form-control" id="intervaloHoras" min="0" value="1">
         </div>
         <div class="col">
           <label for="intervaloMinutos" class="form-label">Minutos de intervalo</label>
           <input type="number" class="form-control" id="intervaloMinutos" min="0" max="59" value="0">
         </div>
       </div>
-
-      <div class="mb-3">
-        <label class="form-label">Total de intervalo (minutos)</label>
-        <input type="text" class="form-control" id="totalIntervalo" readonly>
-      </div>
-
-      <button type="submit" class="btn btn-danger w-100">Calcular Hora de Saída</button>
+      <button type="submit" class="btn btn-primary w-100">Calcular Hora de Saída</button>
     </form>
 
-    <div class="mt-4 text-center">
-      <p class="result" id="resultado"></p>
+    <div class="mt-3 text-center">
+      <p class="result" id="resultadoSaida"></p>
     </div>
+
+    <hr>
+
+    <!-- Seção 2: Retorno do almoço/janta -->
+    <form id="formAlmoco" novalidate>
+      <h5 class="mb-3">🍽️ Retorno do Intervalo</h5>
+      <div class="mb-3">
+        <label for="horaSaidaAlmoco" class="form-label">Hora de saída para o Intervalo</label>
+        <input type="time" class="form-control" id="horaSaidaAlmoco" required>
+      </div>
+      <div class="row mb-3">
+        <div class="col">
+          <label for="tempoHoras" class="form-label">Horas de intervalo</label>
+          <input type="number" class="form-control" id="tempoHoras" min="0" value="1">
+        </div>
+        <div class="col">
+          <label for="tempoMinutos" class="form-label">Minutos de intervalo</label>
+          <input type="number" class="form-control" id="tempoMinutos" min="0" max="59" value="10">
+        </div>
+      </div>
+      <button type="submit" class="btn btn-warning w-100">Calcular Hora de Retorno</button>
+    </form>
+
+    <div class="mt-3 text-center">
+      <p class="result" id="resultadoAlmoco"></p>
+    </div>
+
+    <hr>
+
+    <!-- Resumo Final -->
+    <h5 class="mb-3">📊 Resumo Final</h5>
+    <table class="table table-bordered text-center" id="tabelaResumo">
+      <thead>
+        <tr>
+          <th>Hora de Chegada</th>
+          <th>Saída para Almoço</th>
+          <th>Retorno do Almoço</th>
+          <th>Hora Final de Saída</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td id="resumoChegada">--:--</td>
+          <td id="resumoSaidaAlmoco">--:--</td>
+          <td id="resumoRetornoAlmoco">--:--</td>
+          <td id="resumoSaidaFinal">--:--</td>
+        </tr>
+      </tbody>
+    </table>
+
+     <button type="button" class="btn btn-success w-100 mt-3" onclick="baixarResumoPDF()">📥 Exportar Resumo em PDF</button>
   </div>
+
+     <!-- Logo para o PDF (coloque a imagem nesta pasta) -->
+   <img id="logoPdf" src="/img/logotipo.jpg" alt="Logo Savegnago">
 
     <footer>
     
