Fix HTML structure and formatting

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="btn-grid">
       <a href="/paginas/Calculadora.html" class="portal-btn">Calculadora de Ponto</a>
       <a href="/paginas/Anotação.html" class="portal-btn">Bloco de Anotações</a>
-      <a href="/paginas/Cartaz.html" class="portal-btn">Cartaz <br> Sistema Em Manuteção</a>
+      <a href="" class="portal-btn">Cartaz <br> Sistema Em Manuteção</a>
     </div>
   </div>
 
@@ -43,4 +43,5 @@
     </footer>
 
 </body>
+
 </html>
