--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/index.css">
+  <link rel="icon" type="image/png" href="/img/IconeSvgLogo.png">
   <title>Portal da Loja 62</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -29,5 +30,6 @@
 
 </body>
 </html>
+
 
 
