--- a/paginas/Anotação.html
+++ b/paginas/Anotação.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/estilo.css">
   <link rel="stylesheet" href="/css/home.css">
+  <link rel="icon" type="image/png" href="/img/IconeSvgLogo.png">
   <script src="/js/anotação.js" defer></script>
   <title>Savegnago - Portal do Funcionário</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -73,4 +74,5 @@
 
     </footer>
 </body>
+
 </html>
