--- a/paginas/Calculadora.html
+++ b/paginas/Calculadora.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/css/estilo.css">
   <link rel="stylesheet" href="/css/calculo.css">
   <link rel="manifest" href="/manifest.json">
+  <link rel="icon" type="image/png" href="/img/IconeSvgLogo.png">
 
   <link rel="manifest" href="/manifest.json">
   <script>
@@ -131,3 +132,4 @@
     </footer>
 </body>
 </html>
+
