--- a/paginas/Cartaz.html
+++ b/paginas/Cartaz.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/estilo.css">
   <link rel="stylesheet" href="/css/cartaz.css">
+  <link rel="icon" type="image/png" href="/img/IconeSvgLogo.png">
   <script src="/js/cartaz.js" defer></script>
   <title>Criador de Cartazes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -74,6 +75,7 @@
     </footer>
 
 </body>
+
 
 
 
