--- a/index.html
+++ b/index.html
@@ -3,33 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/css/estilo.css">
+  <link rel="stylesheet" href="/css/home.css">
   <link rel="icon" type="image/png" href="/img/IconeSvgLogo.png">
-  <title>Portal da Loja 62</title>
+  <title>Savegnago - Portal do Funcionário</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-  <div class="container-box text-center">
-    <img src="img/logotipo.jpg" alt="Logo Savegnago" class="img-fluid mb-3" style="max-height: 80px;">
-    <h2>Portal da Loja 62</h2>
-    <p class="lead">Bem-vindo, Colaborador(a)!</p>
+    <header class="shadow">
+        <div class="header-primeiro ">
+            <a href="/index.html"><img src="/img/logotipo.jpg" alt="logo"></a>
+        </div>
 
-    <div class="row g-3 mt-4">
-      <div class="col-12 col-md-4">
-        <a href="/paginas/Calculadora.html" class="btn btn-primary w-100">📊 Calculadora de Ponto</a>
-      </div>
-      <div class="col-12 col-md-4">
-        <a href="/paginas/Anotacao.html" class="btn btn-secondary w-100">📝 Bloco de Anotações</a>
-      </div>
-      <div class="col-12 col-md-4">
-        <a href="#" class="btn btn-danger w-100 text-wrap">⚠️ Cartaz<br>Sistema em Manutenção</a>
-      </div>
+        <div class="text-center header-segundo">
+            <h2 class="mt-2 p-1">Portal da Loja 62</h2>
+
+        </div>
+    </header>
+
+  <div class="container-box">
+    <div class="welcome">Bem-vindo, Colaborador(a)!</div>
+
+    <div class="btn-grid">
+      <a href="/paginas/Calculadora.html" class="portal-btn">Calculadora de Ponto</a>
+      <a href="/paginas/Anotação.html" class="portal-btn">Bloco de Anotações</a>
+      <a href="" class="portal-btn">Cartaz <br> Sistema Em Manuteção</a>
     </div>
   </div>
 
+    <footer>
+    
+        <div class="footer-bottom text-muted">
+            <hr>
+            <p>copyright &copy; Sem direitos, 2026</p>
+            <hr>
+            <p>Projeto criado por <a href="https://vinivp.vercel.app">vinivp</a> programador front end</p>
+        </div>
+
+    </footer>
+
 </body>
 </html>
-
-
-
