Enhance index.html with additional navigation links
Updated the index.html file to include new links and improve navigation.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <div class="btn-grid">
       <a href="/paginas/Calculadora.html" class="portal-btn">Calculadora de Ponto</a>
       <a href="/paginas/Anotação.html" class="portal-btn">Bloco de Anotações</a>
-      <a href="" class="portal-btn">Cartaz <br> Sistema Em Manuteção</a>
+      <a href="https://savegnago.smarketsolutions.com.br/" class="portal-btn">Smarket</a>
+      <a href="/paginas/cartaz.html" class="portal-btn">Pedido de Cartaz</a>
+      <a href="https://dtfaceum.com/gruposavegnago" class="portal-btn">Marcação de Facial</a>
     </div>
   </div>
 
