--- a/paginas/Cartaz.html
+++ b/paginas/Cartaz.html
@@ -1,69 +1,85 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/estilo.css">
+  <meta charset="UTF-8" />
+  <title>Pedido de Cartaz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/css/cartaz.css">
-  <link rel="icon" type="image/png" href="/img/IconeSvgLogo.png">
-  <script src="/js/cartaz.js" defer></script>
-  <title>Criador de Cartazes</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/estilo.css">
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
 <body>
     <header class="shadow">
-     <div class="header-primeiro ">
-        <a href="/index.html"><img src="/img/logotipo.jpg" alt="logo"></a>
-      </div>
+        <div class="header-primeiro ">
+            <a href="/index.html"><img src="/img/logotipo.jpg" alt="logo"></a>
+        </div>
 
-    <div class="text-center header-segundo">
-      <h2 class="mt-2 p-1">Sistema de Cartaz</h2>
-      <button type="button" class="btn-header-segundo m-2"><a style="text-decoration: none; color: #ffffff;" href="/index.html"> Sair do Portal</a></button>
-    </div>
-  </header>
+        <div class="text-center header-segundo">
+            <h2 class="mt-2 p-1">Bloco dos Repositores</h2>
+            <button type="button" class="btn-header-segundo m-2"><a style="text-decoration: none; color: #ffffff;" href="/index.html"> Sair do Portal</a></button>
+        </div>
+    </header>
 
-  <div class="container-box">
-    <h3 class="text-center mb-4">🖨️ Criador de Cartazes</h3>
-
+  <main>
     <form id="formCartaz">
-      <div class="mb-3">
-        <label for="descricao" class="form-label">Descrição do Produto</label>
-        <input type="text" class="form-control" id="descricao" required>
-      </div>
-
-      <div class="mb-3">
-        <label for="preco" class="form-label">Preço</label>
-        <input type="text" class="form-control" id="preco" placeholder="Ex: R$ 9,99" required>
-      </div>
-
-      <div class="mb-3">
-        <label class="form-label">Tipo de Cartaz</label>
-        <select class="form-select" id="tipoCartaz">
-          <option value="oferta">Oferta</option>
-          <option value="normal">Sem Oferta</option>
+      <div class="field">
+        <label>Setor</label>
+        <select id="setor" >
+          <option value="">Selecione</option>
+          <option>Frios</option><option>Açougue</option><option>Padaria</option>
+          <option>FLV</option><option>Mercearia</option><option>Rotisserie</option>
         </select>
       </div>
-
-      <div class="mb-3">
-        <label for="validadeDias" class="form-label">Validade (em dias)</label>
-        <input type="number" class="form-control" id="validadeDias" placeholder="Ex: 10">
-        <small class="text-muted">Digite o número de dias e o sistema calculará a data final.</small>
+      <div class="field">
+        <label>Código Redutor</label>
+        <input id="codigo"/>
       </div>
+      <div class="field">
+        <label>Preço Cheio</label>
+        <input id="precoCheio"/>
+      </div>
+      <div class="field">
+        <label>Tipo de Preço</label>
+        <select id="tipoPreco" >
+          <option value="">Selecione</option>
+          <option>Preço Cheio</option>
+          <option>Preço Cheio + Cartão</option>
+          <option>Preço Cheio + Saveganhe</option>
+          <option>Preço Cheio com De: / Por:</option>
+        </select>
+      </div>
+      <!-- Campos extras dinâmicos -->
+      <div class="field" id="extraPreco" style="display:none;"></div>
 
-      <button type="submit" class="btn btn-danger w-100">🧾 Gerar Cartaz</button>
+      <div class="field">
+        <label>Tamanho do Cartaz</label>
+        <select id="tamanho">
+          <option value="">Selecione</option>
+          <option>A3</option><option>A4</option><option>A5</option><option>A6</option>
+          <option>Faixa</option><option>A4 Sulfite</option>
+          <option>Faixinha</option><option>PAS</option><option>PASH</option>
+        </select>
+      </div>
+      <button type="submit" class="btn">Adicionar Pedido</button>
     </form>
 
-    <button type="button" class="btn btn-success w-100 mt-3" onclick="baixarPDF()">📥 Baixar em A4</button>
+    <button id="exportarPDF" class="btn">Exportar PDF</button>
+    <button id="limparLista" class="btn btn-danger">Limpar Lista</button>
 
-    <!-- Aqui será gerado o cartaz -->
-    <div id="cartazGerado" class="cartaz d-none"></div>
-  </div>
+    <table>
+      <thead>
+        <tr>
+          <th>#</th><th>Setor</th><th>Redutor</th><th>Preço</th><th>Tipo</th><th>Tamanho</th><th>Custo (R$)</th>
+        </tr>
+      </thead>
+      <tbody id="tabelaPedidos"></tbody>
+      <tfoot>
+        <tr><td colspan="6">Total acumulado</td><td id="totalAcumulado">R$ 0,00</td></tr>
+      </tfoot>
+    </table>
+  </main>
 
-  <!-- Bibliotecas necessárias -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
-    <footer>
+      <footer>
     
         <div class="footer-bottom text-muted">
             <hr>
@@ -74,9 +90,6 @@
 
     </footer>
 
+  <script src="/js/cartaz.js"></script>
 </body>
-
-
-
-
 </html>
