Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="/paginas/Calculadora.html" class="portal-btn">Calculadora de Ponto</a>
       <a href="/paginas/Anotação.html" class="portal-btn">Bloco de Anotações</a>
       <a href="https://savegnago.smarketsolutions.com.br/" class="portal-btn">Smarket</a>
-      <a href="/paginas/cartaz.html" class="portal-btn">Pedido de Cartaz</a>
+      <a href="/paginas/Cartaz.html" class="portal-btn">Pedido de Cartaz</a>
       <a href="https://dtfaceum.com/gruposavegnago" class="portal-btn">Marcação de Facial</a>
     </div>
   </div>
@@ -47,3 +47,4 @@
 
 </body>
 </html>
+
