Fix HTML structure and add missing elements

--- a/paginas/Cartaz.html
+++ b/paginas/Cartaz.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="text-center header-segundo">
-            <h2 class="mt-2 p-1">Bloco dos Repositores</h2>
+            <h2 class="mt-2 p-1">Pedido de Cartaz</h2>
             <button type="button" class="btn-header-segundo m-2"><a style="text-decoration: none; color: #ffffff;" href="/index.html"> Sair do Portal</a></button>
         </div>
     </header>
@@ -92,4 +92,5 @@
 
   <script src="/js/cartaz.js"></script>
 </body>
+
 </html>
