Add favicon link to Cartaz.html
Added favicon link to the HTML head.

--- a/paginas/Cartaz.html
+++ b/paginas/Cartaz.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/css/cartaz.css">
   <link rel="stylesheet" href="/css/estilo.css">
+  <link rel="icon" type="image/png" href="/img/IconeSvgLogo.png">
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
 <body>
@@ -94,3 +95,4 @@
 </body>
 
 </html>
+
